fix(header): adjust styling to resolve vertical scrolling on ie11

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -48,6 +48,7 @@
         min-height: 400px;
         height: 80vh;
         z-index: -1;
+        overflow: hidden;
     }
 }
 
